# GadgetNet

./: .gitignore  CMakeLists.txt  README.md
doc/: 2023-03-12.md
example/: CMakeLists.txt  ChatServer.cpp  EchoServer.cpp
inc/: Channel.h  Common.h  EpollPoller.h  EventLoop.h  EventLoopPool.h  Logger.h  Poller.h  TaskNode.h  Timer.h  Timestamp.h
inc/TcpServer/: Acceptor.h  InetAddress.h  Socket.h  TcpConnection.h  TcpServer.cpp  TcpServer.h
src/: Channel.cpp  EpollPoller.cpp  EventLoop.cpp  EventLoopPool.cpp  TaskNode.cpp  Timer.cpp
src/TcpServer/: Acceptor.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp
test/: CMakeLists.txt  TestChannel.cpp  TestEpollPoller.cpp  TestEventLoop.cpp  TestEventLoopPool.cpp  TestLogger.cpp  TestTaskNode.cpp  TestTcpConnection.cpp  TestTimer.cpp  TestTimestamp.cpp
